--- a/src/Busybee/TimeTableBundle/Resources/views/TimeTable/builder.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/TimeTable/builder.html.twig
@@ -8,6 +8,11 @@
 
 {% set transDomain = 'BusybeeTimeTableBundle' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    {% include '@BusybeeHome/Toggle/style.html.twig' %}
+{% endblock %}
+
 {% block contentContainer %}
     <div class="container-fluid">
         <div class="row">
@@ -66,6 +71,40 @@
                     </div>
                 {% endfor %}
                 {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
+                {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'grade.control.title', 'transDomain': 'BusybeeInstituteBundle', 'panelParagraph': 'grade.control.description', 'h3Content': ''} %}
+                {% set row = 0 %}
+                {% set toggle = 'data-toggle=toggle data-onstyle=success data-offstyle=danger data-height=25 data-size=small data-on="<span class=\'halflings halflings-thumbs-up\'></span>" data-off="<span class=\'halflings halflings-thumbs-down\'></span>"' %}
+                {% set control = app.session.get('gradeControl') %}
+                {% if control is empty %}
+                    {% set control = {} %}
+                {% endif %}
+                {% for grade in grades %}
+                    {% if row == 0 %}
+                        <div class="row">
+                    {% endif %}
+                    <div class="col-sm-4 well">
+                        <div class="form-group">
+                            {% set checked = '' %}
+                            {% if control[grade.grade] is not defined or control[grade.grade] %}
+                                {% set checked = 'checked' %}
+                            {% endif %}
+                            <input type="checkbox" name="control[{{ grade.grade }}]" id="grade_{{ grade.grade }}"
+                                   class="gradeControl form-control"
+                                   title="{{ 'grade.control.toggle'|trans({}, 'BusybeeInstituteBundle') }}" {{ toggle|raw }} {{ checked }} />
+                            <label for="grade_{{ grade.grade }}">{{ 'grade.control.label'|trans({'%grade%': grade.grade}, 'BusybeeInstituteBundle') }}</label>
+                        </div>
+                    </div>
+                    {% set row = row + 1 %}
+                    {% if row == 3 %}
+                        </div>
+                        {% set row = 0 %}
+                    {% endif %}
+
+                {% endfor %}
+                {% if row > 0 %}
+            </div>
+            {% endif %}
+            {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
             </div>
             <div class="col-md-4 well">
                 {% set h3Content = returnButton({'windowOpen': {'route': path('timetable_manage')}}) %}
@@ -226,6 +265,10 @@
             return true;
         });
 
+        $('.gradeControl').change(function () {
+            alert($(this).prop('id'));
+        });
+
         function resetBuilder() {
             var id = $('#resetButton').attr('reset');
             var path = '{{ path('timetable_builder', {'id': app.request.get('id'), 'all': '__all__'}) }}';
@@ -234,5 +277,5 @@
             window.open(path, '_self');
         }
     </script>
-
+    {% include '@BusybeeHome/Toggle/script.html.twig' %}
 {% endblock javascripts %}
