--- a/src/Busybee/TimeTableBundle/Resources/views/TimeTable/builder.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/TimeTable/builder.html.twig
@@ -71,7 +71,7 @@
                     </div>
                 {% endfor %}
                 {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
-                {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'grade.control.title', 'transDomain': 'BusybeeInstituteBundle', 'panelParagraph': 'grade.control.description', 'h3Content': ''} %}
+                {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'grade.control.title', 'transDomain': 'BusybeeInstituteBundle', 'panelParagraph': 'grade.control.description', 'h3Content': '', 'panelAttr': 'id=tt_grade_control'} %}
                 {% set row = 0 %}
                 {% set toggle = 'data-toggle=toggle data-onstyle=success data-offstyle=danger data-height=25 data-size=small data-on="<span class=\'halflings halflings-thumbs-up\'></span>" data-off="<span class=\'halflings halflings-thumbs-down\'></span>"' %}
                 {% set control = app.session.get('gradeControl') %}
@@ -185,6 +185,7 @@
                 button.toggleClass('glyphicons-unlock');
                 $('#periodStatus' + id).fadeOut(1000);
                 $('#period_pagination').fadeIn(1000);
+                $('#tt_grade_control').fadeIn(1000);
                 $('#resetButton').attr('reset', 'All');
             } else {
                 $clear.css({
@@ -204,6 +205,7 @@
                 $('#resetButton').attr('reset', id);
                 $('#periodStatus' + id).fadeIn(1000);
                 $('#period_pagination').fadeOut(10);
+                $('#tt_grade_control').fadeOut(10);
             }
 
 
@@ -266,7 +268,18 @@
         });
 
         $('.gradeControl').change(function () {
-            alert($(this).prop('id'));
+            var grade = $(this).prop('id');
+            grade = grade.replace('grade_', '');
+
+            var path = '{{ path('grade_control', {'grade': '__grade__'}) }}';
+            path = path.replace('__grade__', grade);
+
+            $.ajax({
+                url: path,
+                type: 'POST',
+                success: function (data) {
+                }
+            });
         });
 
         function resetBuilder() {
