End of Day 21st June 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/views/Display/index.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Display/index.html.twig
@@ -7,5 +7,5 @@
 {% block headerLead %}{{ 'timetable.display.description'|trans({'%type%': manager.display.type, '%identifier%': manager.display.identifier}) }}{% endblock headerLead %}
 
 {% block contentContainer %}
-    {{ dump() }}
+    {{ dump(manager.display) }}
 {% endblock contentContainer %}
