TimeTable Display Student
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/views/Columns/columnContent.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Columns/columnContent.html.twig
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 well">
-                {{ form_widget(col.periods, {'attr': {'class': 'periodList_' ~ name}}) }}
+                {{ form_widget(col.periods, {'attr': {'class': 'periodList_' ~ name}, col_id: col.vars.value.id}) }}
                 {{ form_widget(col.timetable, {'value': app.request.get('id')}) }}
             </div>
         </div>
