--- a/src/Busybee/HomeBundle/Resources/views/Default/headerNotice.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Default/headerNotice.html.twig
@@ -5,7 +5,11 @@
         {% set headerNotices = headerNotices ~ miscButton({'transDomain': 'BusybeeHomeBundle', 'style': 'float: left;', 'title': 'year.system.warning', 'class': 'btn btn-warning btn-header', 'prompt': {'message': 'year.system.year', 'params': {'%year%': get_SystemYear(app.user).name }}, 'windowOpen': {'route': path('person_edit', {'id': app.user.person.id, '_fragment': 'user'})}}) %}
         {% set containerThemeOverwrite = ' containerWarning' %}
     {% else %}
-        {% set headerNotices = headerNotices ~ miscButton({'transDomain': 'BusybeeHomeBundle', 'style': 'float: left;', 'title': 'year.system.current', 'class': 'btn btn-success btn-header', 'prompt': {'message': 'year.system.year', 'params': {'%year%': get_SystemYear(app.user).name }}, 'windowOpen': {'route': path('person_edit', {'id': app.user.person.id, '_fragment': 'user'})}}) %}
+        {% if app.user.person is not empty %}
+            {% set headerNotices = headerNotices ~ miscButton({'transDomain': 'BusybeeHomeBundle', 'style': 'float: left;', 'title': 'year.system.current', 'class': 'btn btn-success btn-header', 'prompt': {'message': 'year.system.year', 'params': {'%year%': get_SystemYear(app.user).name }}, 'windowOpen': {'route': path('person_edit', {'id': app.user.person.id, '_fragment': 'user'})}}) %}
+        {% else %}
+            {% set headerNotices = headerNotices ~ miscButton({'transDomain': 'BusybeeHomeBundle', 'style': 'float: left;', 'title': 'year.system.current', 'class': 'btn btn-default btn-header', 'prompt': {'message': 'year.system.year', 'params': {'%year%': get_SystemYear(app.user).name }}, additional: 'disabled' }) %}
+        {% endif %}
     {% endif %}
 {% endif %}
 
