TimeTable Work in Progress
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/views/Scripts/monitorForm.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Scripts/monitorForm.html.twig
@@ -3,6 +3,7 @@
     $('.monitorChange').change(function () {
         $('.formChanged').prop("disabled", true);
         $('button[title="Add"]').prop('disabled', true);
+        $('.disableOnChange').prop('disabled', true);
     });
 
     $(".changeRecord").change(function () {
